app.css
:root {
  --gray-50: #656266;
  --gray-100: #B5B5B5;
  --gray-200: #303030;
  --gray-300: #1A1A1A;
  --stroke-s50: #DBDBDB;
  --stroke-s100: #E1E1E1;
  --stroke-s200: #616161;
  --font-light: #E3E3E3;
  --font-dark: #323232;
  --hover: #F1F1F1;
  --hover-btn: #E7E7E7;
  --focused: #005BD3;
  --accent: #36FBA1;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
  outline: none;
}

html {
  font-size: 100%;
  font-family: 'Inter', sans-serif;
  transition: all 1s linear;
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
}

img {
  width: 100%;
  object-fit: cover;
}


.btn {
  display: flex;
  padding: 6px 12px;
  align-items: center;
  gap: 8px;
} 



.text-12 {
  font-size: 12px;
  font-style: normal;
  line-height: 130%;
}

.text-13 {
  font-size: 13px;
  font-style: normal;
  line-height: 140%; 
}

.text-14 {
  font-size: 14px;
  font-style: normal;
  line-height: 140%;
}

header {
    position: relative;
  display: flex;
  padding: 12px 16px;
  align-items: center;
  justify-content: space-evenly;
  gap: 8px;
  background-color: rgb(26,26,26);
}

@media screen and (min-width :800px){
  header {
  justify-content: space-between;
  padding-right: 2rem;
  padding-left: 2rem;

}
.logo a img{
  width: 104.868px;
  height: 30px;

}

}


.logo img{
  width: 32px;
  height: 32px;
}

.search-box {
  display: flex;
  height: 32px;
  padding: 8px;
  align-items: center;
  gap: 6px;
  flex: 1 0 0;
  border-radius: 8px;
  border: 1px solid var(--stroke-s200);
  border: 1px solid var(--stroke-s-200, #616161);
    background: var(--grey-g-200, #303030);
  max-width: 480px;
}

.search-box:hover {
  border: 1px solid var(--stroke-s100);
}

.search-box.focus {
  border: 2px solid #FFF;
}

.search-box--btn {
  display: flex;
  justify-content: center;
  align-items: center;
  background: transparent;
  border: none;
  cursor: pointer;
}

.search-box--search {
  width: 100%;
  border: none;
  background-color: inherit;
  outline: none;
  color: var(--gray-100);
  cursor: pointer;
}

.notify-container{
  display: flex;
  align-items: center;
  gap: 5px;
 
}
.notification {
    padding: 2px;
    align-items: center;
    border-radius: 5px;
    background: #303030;
    border: none;
    outline: none;
    cursor: pointer;                
}

.notify-container .notification svg{
  width: 30px;
  
}
.notification:hover, .dc-container:hover{
  background: #616161;
}

.notification.active, .dc-container.active {
  background: #656266;
}

.notification:focus, .dc-container:focus{
    background: var(--grey-grey-50, #656266);
    box-shadow: 0px 0px 0px 3px #005BD3, 0px 0px 0px 1px #000;
}


.dc-container{
  border-radius: 8px;
  padding: 5px;
  background: #303030;
  display: flex;
  border-radius: 8px; 
  justify-content: flex-start; 
  align-items: center;
  gap: 8px; 
  outline: none;
  border: none;
}

.dc-text{
  display: none ;
  padding-left: 8px;
  color: #E3E3E3; 
  font-size: 12px; 
  font-weight: 500; 
  line-height: 15.60px; 
  word-wrap: break-word;
}
.dc-logo{
   padding: 5px; 
   background: #36FBA1; 
   border-radius: 6px; 
   overflow: hidden; 
   justify-content: center; 
   align-items: center; 
   display: flex;
}
.dc-logo div{
  text-align: center; 
  color: rgba(0, 0, 0, 0.40); 
  font-size: .85rem;
  font-weight: 500; 
  line-height: 15.60px; 
  
}

@media screen and (min-width :800px){
    
    .notify-container .notification svg{
    width: 30px;
    }
    .dc-container{
        display: flex;
        align-items: center;
        gap: .5rem;
    }

    .dc-text{
    display: inline-block ;
    }
}

 .alertBox{
  visibility: hidden;
  position: absolute;
  right: 0;
  margin-right: 1rem;
  width: 20rem;
  padding: 16px;
  flex-direction: column;
  align-items: flex-start;
  gap: 1rem;
  border-radius: 14px;
  border: 1px solid  #DBDBDB;
  background:  #FFF;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
 }

.alertHeader{
  display: flex;
  justify-content: space-between;
  align-items: center;
  align-self: stretch;
  margin-bottom: 1rem;
}
.alertBotton-box{
    display: flex;
    align-items: center;
}
.alertBox--btns{
    background: none;
    border: none;
    outline: none;
    cursor: pointer;
   
    padding: 5px;
}
.alertBox--btns:hover{
    border-radius: 6px;
    background: #E7E7E7;
}

.alertBox--btns.active {
    border-radius: 6px;
    background: #E0E0E0;
}

.alertBox--btns:focus{
    border-radius: 6px;
    border: 2px solid var(--states-focused, #005BD3);
    background: #FFF;
    }

.alertHeader p{
  color:  #303030;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 140%;
}
.alertItems{
  display: flex;
  padding: 1rem;
  align-items: center;
  background:  #F1F1F1;
}
.alertItems p{
color:  #303030;
text-align: center;
font-size: 13px;
font-style: normal;
font-weight: 600;
line-height: 140%; 
}

.menuContainer{
  position: absolute;
  visibility: hidden;
  display: flex;
  width: 20rem;
  padding: .8rem;
  flex-direction: column;
  align-items: flex-start;
  gap: .5rem;
  border-radius: 14px;
  border: 1px solid  #DBDBDB;
  background:  #FFF;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
  right: 0;
  margin-right: .6rem;
}
.menuContainer li  {
    width: 100%;
    padding: .5rem;
   
}

.menuContainer li:hover{
    border-radius: 6px;
    background: #E7E7E7;
}
.menu-ctg-two:hover, .menu-ctg-three:hover, .menu-ctg-one:hover {
     background: none !important;
     border-radius: 0;
}
.menu-ctg-two:focus, .menu-ctg-three:focus, .menu-ctg-one:focus {
     
    border: none;
    background: none !important;
    border-radius: 0;
}


.menuContainer li:focus{
    border-radius: 6px;
    border: 2px solid #005BD3;
    background: #FFF;
    }


.menuContainer ul{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: .3rem;
}

.menuContainer li a {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: .5rem;
    
}
/* ... */

